  to fail.

* The 'icmstart' script was modified, improving control over which files
  should initially be installed (see 'man icmstart' and 'man icmstart.rc' for
  details. 

* Icmake's predefined function stat(P_NOCHECK, entry) returns, if `entry'
  does not exist, a list having two elements: list[0] == 0, list[1] == -1.

* Updated the manpages




icmake (8.00.05)

 * Fixed typo in the icmconf manpage: 
        #define PRECOMP           "-x c++-headers" 
   must be
        #define PRECOMP           "-x c++-header"

 * Fixed a bug in the implementation of the '#undef IDENTIFIER' preprocessor
   directive causing intermittend errors on amd64 architectures: instead of
   removing the entry from the table of defined identifiers the id of the 
   item to undefine is simply changed into an empty string. A bit of a kludge,
   but it solves the problem.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 21 Dec 2015 14:12:03 +0100

icmake (8.00.04)

 * Fixed handling of line continuation backslashes (\$) in icm-pp

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 11 Dec 2015 22:01:51 +0100

icmake (8.00.03)

 * Fixed an erroneously placed variable definition in icmbuild.in

 * Fixed too late assignment of a function's address into its symtab record
   due to which functions could not recursively be called.


icmake (8.00.02)

  * Fixed a leftover size_t / unsigned mismatch on amd64 architectures.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 08 Dec 2015 19:23:40 +0100

icmake (8.00.01)

  * Fixed size_t / unsigned mismatches on amd64 architectures.

  * Applied patches provided by Tony Mancill. Thanks, Tony :-)

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 08 Dec 2015 10:55:36 +0100

icmake (8.00.00)

  * This release adds several new builtin functions, which required a
    redefinition of the builtin function codes. Because of this existing .bim
    files must be recompiled from their .im source files. 
